syntax = "proto3";


import "CombatInvokeEntry.proto";
message CombatInvocationsNotify {
	repeated CombatInvokeEntry invoke_list = 11;
}
