syntax = "proto3";

message EnterSceneDoneRsp {
  // CMD_ID = 29301
  int32 retcode = 13;
  uint32 enter_scene_token = 1;
}
