syntax = "proto3";

import "ForwardType.proto";
import "Vector.proto";
message EvtDoSkillSuccNotify {
  ForwardType forward_type = 7;
  Vector forward = 11;
  uint32 skill_id = 12;
  uint32 caster_id = 10;
}