syntax = "proto3";

// CmdId: 27029
// Obf: GOPJBKDDELB
message GetSceneAreaRsp {
	uint32 scene_id = 2;
	repeated uint32 area_id_list = 8;
}
