syntax = "proto3";

// CmdId: 23197
// Obf: PBIPDICGDKH
message GetScenePointReq {
	uint32 belong_uid = 13;
	bool FBFJPEPMAOF = 5;
	uint32 scene_id =15;
}
