syntax = "proto3";

import "UnionCmd.proto";
message UnionCmdNotify {
	repeated UnionCmd cmd_list = 8;
}
